--- a/src/components/scoreboard/Scoreboard.css
+++ b/src/components/scoreboard/Scoreboard.css
@@ -1,9 +1,9 @@
-/* .scoreboardTable {
+.scoreboardTable {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  overflow-y: hidden;
-} */
+  /* overflow-y: hidden; */
+}
 
 /* .score-FlipMove {
   order: 1;
@@ -23,11 +23,11 @@
 .scoreboardTableBlackRow {
   background-color: #0e0e0f;
 }
-/*
+
 .scoreboardTableSelectedRow {
   background-color: #2873ed;
 }
 
 .scoreboardTableSelectedRowFinished {
   background-color: #255eba;
-} */
+}
