--- a/src/components/scoreboard/ProblemBox.css
+++ b/src/components/scoreboard/ProblemBox.css
@@ -27,7 +27,20 @@
 .problemBox-Resolving {
   color: white;
   background-color: #cbb000;
-  border: 2px solid #ffff08;
+}
+
+.problemBox-Bordered {
+  animation: border-blink 1s steps(1) infinite;
+}
+
+@keyframes border-blink {
+  0% {
+    border: 2px solid white;
+  }
+
+  50% {
+    border: 0px solid transparent;
+  }
 }
 
 .problemBox-Partial {
