--- a/src/components/scoreboard/Scoreboard.css
+++ b/src/components/scoreboard/Scoreboard.css
@@ -26,6 +26,7 @@
 
 .scoreboardTableSelectedRow {
   background-color: #2873ed;
+  /* background-color: cadetblue; */
 }
 
 .scoreboardTableSelectedRowFinished {
